# simple-path-tracer

./: .gitignore  CMakeLists.txt  LICENSE  README.md  test_scene_builder.cpp  test_scene_desc.cpp
assets/models/rattan_dining_chair/: license.txt  scene.gltf
include/: Camera.h  Cubemap.h  EmbreeScene.h  EnvironmentManager.h  GLRenderer.h  GLTFLoader.h  Light.h  Material.h  MaterialManager.h  MeshIntegrator.h  PathTracer.h
include/backends/: EmbreeBackend.h  OptixBackend.h
include/optix/: LaunchParams.h
include/scene/: SceneBuilder.h  SceneDesc.h
include/wavefront/: wf_integrator_cpu.h  wf_math.h  wf_pt_cpu.h  wf_queues.h  wf_types.h
src/: Camera.cpp  Cubemap.cpp  EmbreeScene.cpp  EnvironmentManager.cpp  GLRenderer.cpp  GLTFLoader.cpp  Light.cpp  Material.cpp  MaterialManager.cpp  MeshIntegrator.cpp  PathTracer.cpp  PathTracer_backup.cpp  main.cpp
src/backends/: EmbreeBackend.cpp  OptixBackend.cpp
src/optix/: device_programs.cu
src/scene/: SceneBuilder.cpp
src/wavefront/: wf_integrator_cpu.cpp  wf_pt_cpu.cpp
